# greeklab

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
.streamlit/: config.toml
app/: dashboard.py  requirements.txt
examples/: greeks_table.py  heston_vol_smile.py  iv_from_market_price.py
src/greeklab/: __init__.py  _typing.py  _utils.py  binomial.py  black_scholes.py  exotics.py  heston.py  implied_vol.py  monte_carlo.py  surface.py
tests/: test_binomial.py  test_black_scholes.py  test_dashboard_smoke.py  test_exotics.py  test_heston.py  test_implied_vol.py  test_monte_carlo.py  test_surface.py
